--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^6.1.0
   simple_gradient_text: ^1.3.0
   shared_preferences: ^2.2.1
+  fluttertoast: ^8.2.2
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
 
 dev_dependencies:
   flutter_test:
