--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   fluttertoast: ^8.2.2
   firebase_auth: ^4.10.1
   firebase_core: ^2.17.0
+  marquee: ^2.2.3
+  cloud_firestore: ^4.9.3
 
 dev_dependencies:
   flutter_test:
